# explainable-investment-analytics

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-artifacts.md  methodology.md  overview.md
examples/: quickstart.py
src/eiaf/: __init__.py  config.py  pipeline.py
src/eiaf/audit/: __init__.py  artifacts.py  model_card.py
src/eiaf/explain/: __init__.py  base.py  permutation.py
src/eiaf/metrics/: __init__.py  stability.py
src/eiaf/reason_codes/: __init__.py  generator.py
src/eiaf/utils/: __init__.py  serialization.py
tests/: test_artifacts.py  test_reason_codes.py  test_stability.py
